# cowpy

./: README.md  pyproject.toml
src/cow/: __init__.py
src/cow/common/: chains.py  constants.py
src/cow/subgraph/: __init__.py  client.py  queries.py
