[project]
name = "cow-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mendesfabio", email = "ms.fabiomendes@gmail.com" }
]
dependencies = [
    "web3>=6.15.1",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "cow:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cow"]
